@@ -10,6 +10,7 @@ import ai.brokk.gui.dialogs.PreviewTextPanel;
 import ai.brokk.gui.mop.ThemeColors;
 import ai.brokk.gui.theme.GuiTheme;
 import ai.brokk.gui.theme.ThemeAware;
+import ai.brokk.util.ComputedValue;
 import ai.brokk.util.Messages;
 import java.awt.*;
 import java.awt.event.MouseAdapter;
@@ -17,6 +18,7 @@ import java.awt.event.MouseEvent;
 import java.util.*;
 import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.CancellationException;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.BiConsumer;
 import java.util.function.Predicate;
@@ -38,7 +40,7 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
         RED
     }
 
-    private WarningLevel warningLevel = WarningLevel.NONE;
+    private final WarningLevel warningLevel = WarningLevel.NONE;
 
     @Nullable
     private Service.ModelConfig modelConfig = null;
@@ -70,6 +72,9 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
     private volatile Set<ContextFragment> hoveredFragments = Set.of();
     private volatile boolean readOnly = false;
 
+    // Subscriptions to ComputedValue completions so we can repaint when values become available
+    private final List<ComputedValue.Subscription> cvSubscriptions = Collections.synchronizedList(new ArrayList<>());
+
     // Tooltip for unfilled part (model/max/cost)
     @Nullable
     private volatile String unfilledTooltipHtml = null;
@@ -99,7 +104,13 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
                         if (seg.isSummaryGroup) {
                             // Open combined preview for all summaries (mirrors synthetic chip behavior)
                             int totalFiles = (int) seg.fragments.stream()
-                                    .flatMap(f -> f.files().stream())
+                                    .flatMap(f -> {
+                                        if (f instanceof ContextFragment.ComputedFragment cf) {
+                                            var files = cf.computedFiles().renderNowOr(Set.of());
+                                            return files.stream();
+                                        }
+                                        return f.files().stream();
+                                    })
                                     .map(ProjectFile::toString)
                                     .distinct()
                                     .count();
@@ -108,7 +119,13 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
                             StringBuilder combinedText = new StringBuilder();
                             for (var f : seg.fragments) {
                                 try {
-                                    combinedText.append(f.text()).append("\n\n");
+                                    if (f instanceof ContextFragment.ComputedFragment cf) {
+                                        combinedText
+                                                .append(cf.computedText().renderNowOr("(Loading summary...)"))
+                                                .append("\n\n");
+                                    } else {
+                                        combinedText.append(f.text()).append("\n\n");
+                                    }
                                 } catch (Exception ex) {
                                     logger.debug("Failed reading summary text for preview", ex);
                                 }
@@ -255,10 +272,35 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
      * Provide the current fragments so the bar can paint per-fragment segments and compute tooltips.
      */
     public void setFragments(List<ContextFragment> fragments) {
+        // Dispose prior subscriptions
+        clearCvSubscriptions();
+
         this.fragments = List.copyOf(fragments);
         // Invalidate token cache entries for removed ids to keep memory bounded
         var validIds = this.fragments.stream().map(ContextFragment::id).collect(Collectors.toSet());
         tokenCache.keySet().retainAll(validIds);
+
+        // Dispose any previous owner-level ComputedFragment bindings to avoid accumulation
+        var subsObj = getClientProperty("brokk.cv.subs");
+        if (subsObj instanceof java.util.List<?> subs) {
+            for (var sObj : subs) {
+                if (sObj instanceof ComputedValue.Subscription sub) {
+                    sub.dispose();
+                }
+            }
+            putClientProperty("brokk.cv.subs", null);
+        }
+
+        // Bind fragments to a single repaint/token-cache invalidation runnable
+        for (var f : this.fragments) {
+            if (f instanceof ContextFragment.ComputedFragment cf) {
+                cf.bind(TokenUsageBar.this, () -> {
+                    tokenCache.remove(f.id());
+                    repaint();
+                });
+            }
+        }
+
         repaint();
     }
 
@@ -271,7 +313,7 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
     public void setFragmentsForContext(Context context) {
         List<ContextFragment> frags = context.getAllFragmentsInDisplayOrder();
 
-        // Update UI on EDT
+        // Update UI on EDT (and attach listeners)
         SwingUtilities.invokeLater(() -> setFragments(frags));
 
         // Precompute token counts off-EDT to avoid jank during paint and tooltips
@@ -280,8 +322,14 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
             protected Void doInBackground() {
                 for (var f : frags) {
                     try {
+                        if (f instanceof ContextFragment.ComputedFragment cf) {
+                            // Kick off computations eagerly
+                            cf.computedText().start();
+                            cf.computedDescription().start();
+                            cf.computedFiles().start();
+                        }
                         if (f.isText() || f.getType().isOutput()) {
-                            // This will compute and cache the token count for the fragment
+                            // This will compute and cache the token count for the fragment (non-blocking text path)
                             tokensForFragment(f);
                         }
                     } catch (Exception ignore) {
@@ -334,7 +382,7 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
         }
 
         // Second priority: show performance-based warning if tested and issue detected
-        if (warningLevel != WarningLevel.NONE && modelConfig != null && rateIsTested) {
+        if (warningLevel != WarningLevel.NONE && modelConfig != null) {
             String modelName = modelConfig.name();
             if (modelName.contains("-nothink")) {
                 modelName = modelName.replace("-nothink", "");
@@ -360,6 +408,24 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
 
     @Override
     public String getToolTipText(MouseEvent event) {
+        // Expand the effective "over segment" area by a small horizontal margin so
+        // thin gaps or near-edge positions do not show the model-level tooltip.
+        int mouseX = event.getX();
+        int width = getWidth();
+        final int proximity = 4; // pixels to the left/right to treat as part of a segment
+        var segs = computeSegments(width);
+        for (var s : segs) {
+            if (s.widthPx <= 0) continue;
+            int left = Math.max(0, s.startX - proximity);
+            int right = Math.min(width, s.startX + s.widthPx + proximity);
+            if (mouseX >= left && mouseX < right) {
+                // Suppress any tooltip when mouse is over or very near a filled segment.
+                return "";
+            }
+        }
+
+        // Not near any segment, so we're over the unfilled area.
+        // Show the primary/warning tooltip (unchanged behavior).
         String primaryTooltip = computeWarningTooltip(
                 rateIsTested, modelConfig, warningLevel, lastSuccessRate, computeUsedTokens(), unfilledTooltipHtml);
 
@@ -367,20 +433,7 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
             return primaryTooltip;
         }
 
-        // Fallback: segment-based tooltips
-        try {
-            int width = getWidth();
-            // Ensure segments correspond to current size
-            var segs = computeSegments(width);
-            int x = Math.max(0, Math.min(event.getX(), width));
-            for (var s : segs) {
-                if (x >= s.startX && x < s.startX + s.widthPx) {
-                    return s.tooltipHtml;
-                }
-            }
-        } catch (Exception e) {
-            logger.trace("Failed to compute tooltip for token bar position", e);
-        }
+        // No segment and no primary tooltip. Fallback to default.
         return super.getToolTipText(event);
     }
 
@@ -520,8 +573,7 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
             // Draw text on top: current tokens in white, aligned to the fill's east edge
             g2d.setFont(getFont().deriveFont(Font.BOLD, 11f));
 
-            int fillPixelEnd =
-                    segs.isEmpty() ? 0 : segs.get(segs.size() - 1).startX + segs.get(segs.size() - 1).widthPx;
+            int fillPixelEnd = segs.isEmpty() ? 0 : segs.getLast().startX + segs.getLast().widthPx;
             int usedTokens = computeUsedTokens();
             drawText(g2d, width, height, fillPixelEnd, usedTokens);
 
@@ -614,7 +666,9 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
         return WordUtils.abbreviate(text, maxChars, maxChars, ellipsis);
     }
 
-    /** Pick a readable text color (white or dark) against the given background color. */
+    /**
+     * Pick a readable text color (white or dark) against the given background color.
+     */
     private static Color readableTextForBackground(Color background) {
         double r = background.getRed() / 255.0;
         double g = background.getGreen() / 255.0;
@@ -640,7 +694,7 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
                     (int) Math.floor(width * Math.min(1.0, (double) fallbackCurrentTokens / Math.max(1, maxTokens)));
             boolean dark = isDarkTheme();
             Color fillColor = getOkColor(dark);
-            var s = new Segment(0, Math.max(0, fillWidth), fillColor, "", Set.of(), false);
+            var s = new Segment(0, Math.max(0, fillWidth), fillColor, Set.of(), false);
             this.segments = List.of(s);
             return this.segments;
         }
@@ -712,7 +766,7 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
         List<AllocItem> items = new ArrayList<>();
         if (smallCount == 1) {
             // Exactly one "small" fragment: place it normally with a min width and normal label
-            ContextFragment onlySmall = small.get(0);
+            ContextFragment onlySmall = small.getFirst();
             for (var f : nonSummaries) {
                 int t = tokensForFragment(f);
                 double rw = (t * 1.0 / totalTokens) * effectiveFill;
@@ -811,21 +865,18 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
 
             if (w.item.isSummaryGroup) {
                 Color bg = FragmentColorUtils.getBackgroundColor(FragmentColorUtils.FragmentKind.SUMMARY, isDark);
-                String tip = buildAggregateSummaryTooltip(summaries);
                 Set<ContextFragment> segmentFrags = Set.copyOf(summaries);
-                out.add(new Segment(x, w.width, bg, tip, segmentFrags, true));
+                out.add(new Segment(x, w.width, bg, segmentFrags, true));
             } else if (w.item.isOther) {
                 Color bg = FragmentColorUtils.getBackgroundColor(FragmentColorUtils.FragmentKind.OTHER, isDark);
-                String tip = buildOtherTooltip(small);
                 Set<ContextFragment> segmentFrags = Set.copyOf(small);
-                out.add(new Segment(x, w.width, bg, tip, segmentFrags, false));
+                out.add(new Segment(x, w.width, bg, segmentFrags, false));
             } else {
                 ContextFragment frag = Objects.requireNonNull(w.item.frag);
                 FragmentColorUtils.FragmentKind kind = FragmentColorUtils.classify(frag);
                 Color bg = FragmentColorUtils.getBackgroundColor(kind, isDark);
-                String tip = buildFragmentTooltip(frag);
                 Set<ContextFragment> segmentFrags = Set.of(frag);
-                out.add(new Segment(x, w.width, bg, tip, segmentFrags, false));
+                out.add(new Segment(x, w.width, bg, segmentFrags, false));
             }
 
             x += w.width + SEGMENT_GAP;
@@ -872,7 +923,13 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
             return tokenCache.computeIfAbsent(f.id(), id -> {
                 if (f.isText() || f.getType().isOutput()) {
                     try {
-                        return Messages.getApproximateTokens(f.text());
+                        String text;
+                        if (f instanceof ContextFragment.ComputedFragment cf) {
+                            text = cf.computedText().renderNowOr("(Loading)");
+                        } else {
+                            text = f.text();
+                        }
+                        return Messages.getApproximateTokens(text);
                     } catch (Exception e) {
                         logger.trace("Failed to compute token count for fragment", e);
                         return 0;
@@ -890,21 +947,13 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
         final int startX;
         final int widthPx;
         final Color bg;
-        final String tooltipHtml;
         final Set<ContextFragment> fragments;
         final boolean isSummaryGroup;
 
-        Segment(
-                int startX,
-                int widthPx,
-                Color bg,
-                String tooltipHtml,
-                Set<ContextFragment> fragments,
-                boolean isSummaryGroup) {
+        Segment(int startX, int widthPx, Color bg, Set<ContextFragment> fragments, boolean isSummaryGroup) {
             this.startX = startX;
             this.widthPx = widthPx;
             this.bg = bg;
-            this.tooltipHtml = tooltipHtml;
             this.fragments = fragments;
             this.isSummaryGroup = isSummaryGroup;
         }
@@ -916,182 +965,11 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
 
     // Tooltip helpers (mirroring WorkspaceItemsChipPanel behavior)
 
-    private static String wrapTooltipHtml(String innerHtml, int maxWidthPx) {
-        return "<html><body style='width: " + maxWidthPx + "px'>" + innerHtml + "</body></html>";
-    }
-
-    private static String formatCount(int count) {
-        if (count < 1000) {
-            return String.format("%,d", count);
-        }
-        return String.format("%.1fk", count / 1000.0);
-    }
-
-    private static String buildMetricsHtml(ContextFragment fragment) {
-        try {
-            if (fragment.isText() || fragment.getType().isOutput()) {
-                String text = fragment.text();
-                int loc = text.split("\\r?\\n", -1).length;
-                int tokens = Messages.getApproximateTokens(text);
-                return String.format("<div>%s LOC \u2022 ~%s tokens</div><br/>", formatCount(loc), formatCount(tokens));
-            }
-        } catch (Exception e) {
-            logger.trace("Failed to compute metrics for tooltip", e);
-        }
-        return "";
-    }
-
-    private static String buildSummaryTooltip(ContextFragment fragment) {
-        var files = fragment.files().stream()
-                .map(ProjectFile::toString)
-                .distinct()
-                .sorted()
-                .toList();
-
-        StringBuilder body = new StringBuilder();
-
-        String metrics = buildMetricsHtml(fragment);
-        if (!metrics.isEmpty()) {
-            body.append(metrics);
-        }
-
-        body.append("<div><b>Summaries</b></div>");
-        body.append("<hr style='border:0;border-top:1px solid #ccc;margin:4px 0 6px 0;'/>");
-
-        if (files.isEmpty()) {
-            String d = fragment.description();
-            body.append(StringEscapeUtils.escapeHtml4(d));
-        } else {
-            body.append("<ul style='margin:0;padding-left:16px'>");
-            for (var f : files) {
-                body.append("<li>").append(StringEscapeUtils.escapeHtml4(f)).append("</li>");
-            }
-            body.append("</ul>");
-        }
-
-        body.append("<br/><i>Click to preview contents</i>");
-        return wrapTooltipHtml(body.toString(), 420);
-    }
-
-    private static String buildDefaultTooltip(ContextFragment fragment) {
-        String d = fragment.description();
-        String descriptionHtml = StringEscapeUtils.escapeHtml4(d)
-                .replace("\r\n", "\n")
-                .replace("\r", "\n")
-                .replace("\n", "<br/>");
-
-        StringBuilder body = new StringBuilder();
-
-        String metrics = buildMetricsHtml(fragment);
-        if (!metrics.isEmpty()) {
-            body.append(metrics);
-        }
-
-        body.append(descriptionHtml);
-        body.append("<br/><br/><i>Click to preview contents</i>");
-
-        return wrapTooltipHtml(body.toString(), 420);
-    }
-
-    private static String buildFragmentTooltip(ContextFragment fragment) {
-        if (fragment.getType() == ContextFragment.FragmentType.SKELETON) {
-            return buildSummaryTooltip(fragment);
-        }
-        return buildDefaultTooltip(fragment);
-    }
-
-    private String buildOtherTooltip(List<ContextFragment> smallFragments) {
-        int totalTokens = 0;
-        int totalLoc = 0;
-        for (var f : smallFragments) {
-            if (f.isText() || f.getType().isOutput()) {
-                try {
-                    String text = f.text();
-                    totalLoc += text.split("\\r?\\n", -1).length;
-                    totalTokens += Messages.getApproximateTokens(text);
-                } catch (Exception e) {
-                    logger.trace("Failed to compute metrics for tooltip", e);
-                }
-            }
-        }
-        StringBuilder body = new StringBuilder();
-        body.append(String.format(
-                "<div>%s LOC \u2022 ~%s tokens</div><br/>", formatCount(totalLoc), formatCount(totalTokens)));
-        body.append("<div><b>Other</b></div>");
-        body.append("<hr style='border:0;border-top:1px solid #ccc;margin:4px 0 6px 0;'/>");
-
-        if (!smallFragments.isEmpty()) {
-            body.append("<ul style='margin:0;padding-left:16px'>");
-            // List up to 12 items by shortDescription
-            int listed = 0;
-            for (var f : smallFragments) {
-                if (listed >= 12) break;
-                String name = f.shortDescription();
-                body.append("<li>").append(StringEscapeUtils.escapeHtml4(name)).append("</li>");
-                listed++;
-            }
-            if (smallFragments.size() > listed) {
-                body.append("<li>... and ")
-                        .append(smallFragments.size() - listed)
-                        .append(" more</li>");
-            }
-            body.append("</ul>");
-        }
-
-        return wrapTooltipHtml(body.toString(), 420);
-    }
-
-    private static String buildAggregateSummaryTooltip(List<ContextFragment> summaries) {
-        var allFiles = summaries.stream()
-                .flatMap(f -> f.files().stream())
-                .map(ProjectFile::toString)
-                .distinct()
-                .sorted()
-                .toList();
-
-        StringBuilder body = new StringBuilder();
-
-        // Aggregate metrics (LOC + tokens) across all summaries
-        int totalLoc = 0;
-        int totalTokens = 0;
-        try {
-            for (var summary : summaries) {
-                String text = summary.text();
-                totalLoc += text.split("\\r?\\n", -1).length;
-                totalTokens += Messages.getApproximateTokens(text);
-            }
-            body.append("<div>")
-                    .append(formatCount(totalLoc))
-                    .append(" LOC \u2022 ~")
-                    .append(formatCount(totalTokens))
-                    .append(" tokens</div><br/>");
-        } catch (Exception e) {
-            logger.trace("Failed to compute aggregate summary metrics", e);
-        }
-
-        // Header and divider
-        body.append("<div><b>Summaries</b></div>");
-        body.append("<hr style='border:0;border-top:1px solid #ccc;margin:4px 0 6px 0;'/>");
-
-        if (allFiles.isEmpty()) {
-            body.append("Multiple summaries");
-        } else {
-            body.append("<ul style='margin:0;padding-left:16px'>");
-            for (var f : allFiles) {
-                body.append("<li>").append(StringEscapeUtils.escapeHtml4(f)).append("</li>");
-            }
-            body.append("</ul>");
-        }
-
-        body.append("<br/><i>Click to preview all contents</i>");
-        return wrapTooltipHtml(body.toString(), 420);
-    }
-
     private Color getTrackColor() {
         Color panel = UIManager.getColor("Panel.background");
         boolean dark = isDarkTheme();
         if (panel != null) {
-            return dark ? lighten(panel, 0.08f) : darken(panel, 0.18f);
+            return dark ? lighten(panel) : darken(panel);
         }
         Color pb = UIManager.getColor("ProgressBar.background");
         if (pb != null) return pb;
@@ -1102,16 +980,16 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
         return UIManager.getBoolean("laf.dark");
     }
 
-    private static Color lighten(Color base, float amount) {
-        amount = Math.max(0f, Math.min(1f, amount));
+    private static Color lighten(Color base) {
+        float amount = 0.08f;
         int r = Math.min(255, Math.round(base.getRed() + (255 - base.getRed()) * amount));
         int g = Math.min(255, Math.round(base.getGreen() + (255 - base.getGreen()) * amount));
         int b = Math.min(255, Math.round(base.getBlue() + (255 - base.getBlue()) * amount));
         return new Color(r, g, b);
     }
 
-    private static Color darken(Color base, float amount) {
-        amount = Math.max(0f, Math.min(1f, amount));
+    private static Color darken(Color base) {
+        float amount = 0.18f;
         int r = Math.max(0, Math.round(base.getRed() * (1f - amount)));
         int g = Math.max(0, Math.round(base.getGreen() * (1f - amount)));
         int b = Math.max(0, Math.round(base.getBlue() * (1f - amount)));
@@ -1120,6 +998,19 @@ public class TokenUsageBar extends JComponent implements ThemeAware {
 
     private Color getOkColor(boolean dark) {
         return dark ? new Color(0x2EA043) : new Color(0x1F883D);
+    }
+
+    private void clearCvSubscriptions() {
+        synchronized (cvSubscriptions) {
+            for (var s : cvSubscriptions) {
+                try {
+                    s.dispose();
+                } catch (CancellationException executionException) {
+                    logger.warn("Failed to cancel the ComputedValue subscription", executionException);
+                }
+            }
+            cvSubscriptions.clear();
+        }
     }
 
     @Override
